# wavecollapsetest

./: Cargo.toml  model_output_file.txt  oldvert.glsl  player.blend  proj with export script for this shader.blend  treebush.blend
src/: camera.rs  main.rs  maincomponents.rs  shader.rs  statics.rs  systems.rs  texture.rs
