[package]
name = "wavecollapsetest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_ecs = "0.14.0"
gl = "0.14.0"
glam = "0.28.0"
glfw = "0.57.0"
image = "0.25.1"
num_enum = "0.7.3"
once_cell = "1.19.0"
tracing = "0.1.40"
